feat: implement JWT based authentication and security configuration